// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests file GifGrid Must show items when images are loaded 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    software
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Sample title"
      url="http://localhost/sample.jpg"
    />
  </div>
</Fragment>
`;

exports[`Tests file GifGrid show component 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    software
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
